Fix Tailwind CSS configuration for Docker build
- Convert globals.css from Tailwind v4 syntax to v3 syntax
- Replace @import 'tailwindcss' with proper @tailwind directives
- Fix @theme syntax to use :root for CSS variables
- Add pnpm rebuild step in Dockerfile to handle build scripts
- This should resolve the 'Can't resolve tailwindcss' error

--- a/utopia-frontend/Dockerfile
+++ b/utopia-frontend/Dockerfile
@@ -12,6 +12,9 @@ RUN npm install -g pnpm
 # Install dependencies
 RUN pnpm install
 
+# Approve build scripts for packages that need them
+RUN pnpm rebuild
+
 # Copy source code
 COPY . .
 
