--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -125,23 +125,42 @@ jobs:
           port: 22
           timeout: 600s
           script: |
-            echo "Starting deployment..."
+            echo "Setting up environment..."
+
+            # Update system and install dependencies
+            sudo apt-get update
+            sudo apt-get install -y apt-transport-https ca-certificates curl software-properties-common
+
+            # Install Docker if not installed
+            if ! command -v docker &> /dev/null; then
+              echo "Installing Docker..."
+              curl -fsSL https://get.docker.com -o get-docker.sh
+              sudo sh get-docker.sh
+              sudo usermod -aG docker ubuntu
+              rm get-docker.sh
+            fi
+
+            # Install Docker Compose if not installed
+            if ! command -v docker-compose &> /dev/null; then
+              echo "Installing Docker Compose..."
+              sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+              sudo chmod +x /usr/local/bin/docker-compose
+            fi
+
+            # Create application directory
+            sudo mkdir -p /var/www/utopia-ai
+            sudo chown -R ubuntu:ubuntu /var/www/utopia-ai
 
             # Extract deployment package
             cd /tmp
-            tar -xzf deployment.tar.gz
+            tar -xzf deployment.tar.gz -C /var/www/utopia-ai
 
-            # Make deployment script executable
-            chmod +x deploy-docker.sh
+            # Navigate to app directory and start containers
+            cd /var/www/utopia-ai
+            docker-compose down || true
+            docker-compose up -d --build
 
-            # Run Docker deployment
-            export OPENAI_API_KEY="${{ secrets.OPENAI_API_KEY }}"
-            sudo -E bash deploy-docker.sh
-
-            # Cleanup
-            rm -f deployment.tar.gz
-
-            echo "✅ Deployment completed"
+            echo "✅ Initial deployment completed"
 
       - name: Health check and verification
         uses: appleboy/ssh-action@v1.0.3
@@ -182,7 +201,6 @@ jobs:
             echo "Waiting for services to stabilize..."
             sleep 30
 
-            # Check container status
             cd /var/www/utopia-ai
 
             echo "=== Container Status ==="
