--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   backend:
     build:
@@ -29,7 +27,7 @@ services:
     container_name: utopia-frontend
     environment:
       - NODE_ENV=production
-      - NEXT_PUBLIC_API_URL=http://3.82.158.36/api
+      - NEXT_PUBLIC_API_URL=http://localhost:3001/api
     ports:
       - "3000:3000"
     networks:
@@ -53,7 +51,6 @@ services:
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./ssl:/etc/nginx/ssl:ro
     networks:
       - utopia-network
     depends_on:
