--- a/utopia-frontend/Dockerfile
+++ b/utopia-frontend/Dockerfile
@@ -12,9 +12,6 @@ RUN npm install -g pnpm
 # Install dependencies
 RUN pnpm install
 
-# Approve build scripts for packages that need them
-RUN pnpm rebuild
-
 # Copy source code
 COPY . .
 
@@ -33,13 +30,14 @@ WORKDIR /app
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
-# Copy the public folder
+# Copy necessary files from builder
+COPY --from=builder /app/package.json ./package.json
 COPY --from=builder /app/public ./public
+COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/node_modules ./node_modules
 
-# Automatically leverage output traces to reduce image size
-# https://nextjs.org/docs/advanced-features/output-file-tracing
-COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+# Set permissions
+RUN chown -R nextjs:nodejs /app
 
 USER nextjs
 
@@ -48,10 +46,11 @@ EXPOSE 3000
 
 ENV PORT=3000
 ENV HOSTNAME="0.0.0.0"
+ENV NODE_ENV=production
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
   CMD curl -f http://localhost:3000 || exit 1
 
 # Start the application
-CMD ["node", "server.js"] 
+CMD ["pnpm", "run", "start"] 
