--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,7 +88,7 @@ jobs:
           target: "/tmp/"
           timeout: 300s
           strip_components: 0
- 
+
       - name: Deploy with Docker on EC2
         uses: appleboy/ssh-action@v1.0.3
         env:
@@ -168,13 +168,22 @@ jobs:
             docker-compose down || true
 
             echo "Building containers..."
-            docker-compose --env-file .env build
+            docker-compose --env-file .env build --no-cache
 
             echo "Starting containers..."
             docker-compose --env-file .env up -d
 
-            echo "Checking container logs..."
-            docker-compose --env-file .env logs
+            echo "Waiting for containers to start..."
+            sleep 10
+
+            echo "=== Backend Logs ==="
+            docker logs utopia-backend
+
+            echo "=== Frontend Logs ==="
+            docker logs utopia-frontend
+
+            echo "=== Nginx Logs ==="
+            docker logs utopia-nginx
 
             echo "✅ Initial deployment completed"
 
