--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,8 @@ services:
     container_name: utopia-frontend
     environment:
       - NODE_ENV=production
-      - NEXT_PUBLIC_API_URL=http://localhost:3001/api
+      - PORT=3000
+      - NEXT_PUBLIC_API_URL=http://backend:3001/api
     ports:
       - "3000:3000"
     networks:
