--- a/utopia-backend/Dockerfile
+++ b/utopia-backend/Dockerfile
@@ -29,4 +29,4 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
   CMD curl -f http://localhost:3001/api/health || exit 1
 
 # Start the application
-CMD ["npm", "run", "start"] 
+CMD ["pnpm", "run", "start"] 
