--- a/utopia-backend/package.json
+++ b/utopia-backend/package.json
@@ -35,7 +35,7 @@
     "react-dom": "^19.1.0",
     "tsx": "4.20.3",
     "typescript": "^5.8.3",
-    "uuid": "11.1.0"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/cookie": "^1.0.0",
